<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity">Udacity</string>
    <string name="action_settings">Settings</string>
    <string name="login">User Login</string>
    <string name="address">2465 Latham St, Mountain View, CA 94040</string>
    <string name="phone">650 555 5555</string>
    <string name="website">www.udacity.com</string>
    <string name="background">background</string>
    <string name="image">image</string>
    <string name="addresslogo">addresslogo</string>
    <string name="phonelogo">phone</string>
    <string name="weblogo">weblogo</string>
    <string name="description">Udacity is an online educational organization that allows students to better learn the nuances of technology, improve their skills and be ready for future jobs.</string>
    <!-- define your strings here -->
</resources>